spacing fix

--- a/style/style.css
+++ b/style/style.css
@@ -61,6 +61,7 @@
 
 .button {
   text-decoration: none;
+  margin-top: 1em;
   border-radius: 6px;
   padding: 0.8em 1.8em;
   background-color: var(--data-color-accent);
@@ -161,6 +162,9 @@
 }
 
 @media only screen and (max-width: 700px) {
+  .navbar {
+    margin: 0.4em;
+  }
   .button {
     padding: 0.45em 0.85em;
   }
@@ -168,12 +172,12 @@
     font-size: 10px;
   }
   .myImg {
-    width: 120px;
-    height: 120px;
+    width: 100px;
+    height: 100px;
   }
   .welcome-text {
-    font-size: 24px;
-    line-height: 38px;
+    font-size: 18px;
+    line-height: 30px;
     letter-spacing: 0.15px;
   }
   .caseStudyEnlarge {
@@ -181,8 +185,8 @@
   }
   .caseStudySmall {
     display: block;
-    margin: 2em auto;
-    width: 80%;
+    margin: 0.4em auto;
+    width: 90%;
     height: auto;
     -webkit-box-align: center;
         -ms-flex-align: center;
@@ -192,7 +196,6 @@
             justify-content: center;
     text-align: center;
     justify-items: center;
-    margin: 0em auto;
   }
   .caseStudySmall .instyleCover,
   .forbesCover {
